--- a/Roomie/Roomie/Base.lproj/Main.storyboard
+++ b/Roomie/Roomie/Base.lproj/Main.storyboard
@@ -179,7 +179,7 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="34C-c7-Wnv">
-                                <rect key="frame" x="87" y="566" width="200" height="30"/>
+                                <rect key="frame" x="87" y="566" width="201" height="30"/>
                                 <color key="backgroundColor" red="0.40443294759999998" green="0.83409646599999998" blue="0.88384175409999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="SJ9-Hn-zPZ"/>
@@ -199,7 +199,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XR2-Fw-CUh">
-                                <rect key="frame" x="87" y="604" width="200" height="30"/>
+                                <rect key="frame" x="88" y="604" width="199" height="30"/>
                                 <color key="backgroundColor" red="0.40443294759999998" green="0.83409646599999998" blue="0.88384175409999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="7st-AL-Jp0"/>
@@ -295,7 +295,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Roomies Apartment 335" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GfY-0c-oQ8">
-                                <rect key="frame" x="98" y="276" width="178.5" height="30"/>
+                                <rect key="frame" x="98.5" y="276" width="178.5" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="DbX-cx-KzD"/>
                                 </constraints>
@@ -406,7 +406,7 @@
                                                     </constraints>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
+                                                    <textInputTraits key="textInputTraits" textContentType="email"/>
                                                 </textField>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Phone (Optional)" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hGB-UT-FWe">
                                                     <rect key="frame" x="131" y="486" width="113.5" height="30"/>
@@ -415,7 +415,7 @@
                                                     </constraints>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
+                                                    <textInputTraits key="textInputTraits" textContentType="tel"/>
                                                 </textField>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileicon9" translatesAutoresizingMaskIntoConstraints="NO" id="Pgq-XF-dTT">
                                                     <rect key="frame" x="168" y="202" width="40" height="40"/>
@@ -441,20 +441,20 @@
                                                     </userDefinedRuntimeAttributes>
                                                     <connections>
                                                         <action selector="signUpButtonTapped:" destination="LzG-Cr-yRb" eventType="touchUpInside" id="nI5-Ty-lCR"/>
-                                                        <segue destination="VZ2-3Y-J11" kind="show" id="Ok2-FM-4cV"/>
+                                                        <segue destination="VZ2-3Y-J11" kind="show" identifier="" id="Ok2-FM-4cV"/>
                                                     </connections>
                                                 </button>
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="bik-Xg-S4s" userLabel="Full Name Textfield">
-                                                    <rect key="frame" x="100" y="250" width="175" height="30"/>
+                                                    <rect key="frame" x="50" y="250" width="275" height="30"/>
                                                     <subviews>
                                                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="First" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6h4-Fs-tRz">
-                                                            <rect key="frame" x="0.0" y="0.0" width="86" height="30"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="136" height="30"/>
                                                             <nil key="textColor"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <textInputTraits key="textInputTraits"/>
                                                         </textField>
                                                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Last " textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bYZ-9b-gMh">
-                                                            <rect key="frame" x="89" y="0.0" width="86" height="30"/>
+                                                            <rect key="frame" x="139" y="0.0" width="136" height="30"/>
                                                             <nil key="textColor"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <textInputTraits key="textInputTraits"/>
@@ -467,7 +467,7 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="KC9-eP-IWE" firstAttribute="top" secondItem="bik-Xg-S4s" secondAttribute="bottom" constant="8" symbolic="YES" id="1l5-Mm-dGI"/>
-                                                <constraint firstItem="bik-Xg-S4s" firstAttribute="leading" secondItem="OKR-yc-hT9" secondAttribute="leading" constant="100" id="2Df-OT-1hI"/>
+                                                <constraint firstItem="bik-Xg-S4s" firstAttribute="leading" secondItem="OKR-yc-hT9" secondAttribute="leading" constant="50" id="2Df-OT-1hI"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="U1E-eE-Lro" secondAttribute="bottom" constant="47.5" id="5Us-Ia-frZ"/>
                                                 <constraint firstItem="ehY-q1-4vG" firstAttribute="leading" secondItem="OKR-yc-hT9" secondAttribute="leading" id="5iq-Wi-eLP"/>
                                                 <constraint firstItem="KC9-eP-IWE" firstAttribute="trailing" secondItem="HqK-KA-kiI" secondAttribute="trailing" id="800-nc-NFH"/>
@@ -484,7 +484,7 @@
                                                 <constraint firstItem="ehY-q1-4vG" firstAttribute="centerX" secondItem="Pgq-XF-dTT" secondAttribute="centerX" id="KDR-3z-Gmz"/>
                                                 <constraint firstItem="U1E-eE-Lro" firstAttribute="leading" secondItem="OKR-yc-hT9" secondAttribute="leadingMargin" constant="79" id="Kmf-JU-w8c"/>
                                                 <constraint firstItem="GiN-lU-vPS" firstAttribute="top" secondItem="HqK-KA-kiI" secondAttribute="bottom" constant="30" id="Oc6-ST-OmA"/>
-                                                <constraint firstAttribute="trailing" secondItem="bik-Xg-S4s" secondAttribute="trailing" constant="100" id="R3n-aq-Gv2"/>
+                                                <constraint firstAttribute="trailing" secondItem="bik-Xg-S4s" secondAttribute="trailing" constant="50" id="R3n-aq-Gv2"/>
                                                 <constraint firstItem="Pgq-XF-dTT" firstAttribute="top" secondItem="ehY-q1-4vG" secondAttribute="bottom" constant="20" id="REy-l5-ybt"/>
                                                 <constraint firstItem="ehY-q1-4vG" firstAttribute="centerX" secondItem="AsP-5d-X9D" secondAttribute="centerX" id="Ubw-GV-6Ke"/>
                                                 <constraint firstItem="38x-Rm-BpA" firstAttribute="top" secondItem="KC9-eP-IWE" secondAttribute="bottom" constant="30" id="YsW-Bj-gD2"/>
@@ -565,7 +565,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Group Code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RTx-J3-LqZ">
-                                <rect key="frame" x="119" y="203" width="138" height="21"/>
+                                <rect key="frame" x="118" y="203" width="139" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="OVq-Zr-lr5"/>
                                     <constraint firstAttribute="height" constant="21" id="a4y-4p-bfz"/>
