--- a/Roomie/Roomie/Post.storyboard
+++ b/Roomie/Roomie/Post.storyboard
@@ -103,6 +103,7 @@
                             <constraint firstItem="Bh7-oY-CWL" firstAttribute="leading" secondItem="p8y-xd-bgR" secondAttribute="leading" id="yks-GH-4Js"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Post" image="Icon8Message" id="jfQ-f9-Ivc"/>
                     <navigationItem key="navigationItem" title="Messages" id="H1Y-qJ-zWr"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
@@ -139,4 +140,7 @@
             <point key="canvasLocation" x="-172" y="-59.820089955022496"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Icon8Message" width="25" height="25"/>
+    </resources>
 </document>
