--- a/Roomie/Roomie/Task.storyboard
+++ b/Roomie/Roomie/Task.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Title-->
+        <!--Tasks-->
         <scene sceneID="sE9-Sb-1tx">
             <objects>
                 <tableViewController automaticallyAdjustsScrollViewInsets="NO" id="dBd-cu-36m" customClass="TaskListTableViewController" customModule="Roomie" customModuleProvider="target" sceneMemberID="viewController">
@@ -71,7 +71,12 @@
                         </connections>
                     </tableView>
                     <tabBarItem key="tabBarItem" title="Task" image="Icon8Task" id="mKw-y6-98V"/>
-                    <navigationItem key="navigationItem" title="Title" id="DJZ-PV-R8F">
+                    <navigationItem key="navigationItem" title="Tasks" id="DJZ-PV-R8F">
+                        <barButtonItem key="leftBarButtonItem" title="Groups" id="Bzn-j4-vZz">
+                            <connections>
+                                <action selector="groupButtonTapped:" destination="dBd-cu-36m" id="nwg-Rm-tnx"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="LWk-K7-DLE">
                             <connections>
                                 <segue destination="lkw-6Z-soc" kind="show" identifier="ToNewTaskVC" id="3cQ-4r-4uQ"/>
